--- a/app/views/assignments/_description_and_downloads.haml
+++ b/app/views/assignments/_description_and_downloads.haml
@@ -5,6 +5,9 @@
     - else
       .italic= "#{points presenter.assignment.point_total} points possible"
 
+    - if presenter.assignment.threshold_points?
+      .italic= "#{points presenter.assignment.threshold_points} points threshold"
+
   .italic= "Opens: #{presenter.assignment.open_at}" if presenter.assignment.open_at?
   .italic= "Due: #{presenter.assignment.due_at}" if presenter.assignment.due_at?
 
