--- a/app/views/assignments/_form.haml
+++ b/app/views/assignments/_form.haml
@@ -27,6 +27,11 @@
           = f.text_field :point_total
 
     .form-item
+      = f.label :threshold_points, "Points Threshold"
+      = f.text_field :threshold_points
+      .form_label If you set a points threshold, any student earning fewer points will receive no points for the assignment.
+
+    .form-item
       = f.input :open_at, as: :string, :include_blank => true, :input_html => { class: "datetimepicker" }
 
     .form-item
