--- a/app/views/grades/_rubric_edit.html.haml
+++ b/app/views/grades/_rubric_edit.html.haml
@@ -9,11 +9,12 @@
 
       #points-overview-floating(ng-cloak ng-hide="angular.element('#points-overview').isOnscreen()")
         %h4#points-legend
-          %span.points-assigned(ng-class="{'points-missing': pointsMissing(), 'points-satisfied': pointsSatisfied(), 'points-overage': pointsOverage()}") {{finalPoints() | number:0}}
-          \/{{pointsPossible() | number:0}} Points Allocated
+          %span.points-assigned(ng-class="{'points-missing': pointsMissing(), 'points-satisfied': pointsSatisfied(), 'points-overage': pointsOverage()}") {{ finalPoints() }} Points
+        %h4.notice(ng-hide="!pointsSatisfied() && !pointsMissing()") {{ pointsAllocated() | number:0}} / {{pointsPossible() | number:0}} Points Allocated
         %h4.notice(ng-hide="pointsSatisfied() || pointsMissing()") You have not yet allocated any points
         %h4.notice(ng-show="pointsMissing()") {{pointsRemaining() | number:0}} point{{pointsRemaining() > 1 ? "s" : ""}} have not been assigned
         %h4.notice(ng-show="pointsSatisfied()") You have allocated all possible points
+        %h4.notice(ng-show="pointsBelowThreshold()") You have not allocated enough points to meet the threshold
         %h4.notice.adjustment(ng-class="{'positive-adjustment' : adjustmentPoints() > 0}" ng-show="pointsAdjusted()") You have adjusted the total by {{adjustmentPoints()}} points
 
       .clear
@@ -71,11 +72,12 @@
       .points-given
         .points-overview.bottom(ng-cloak)
           %h4.points-legend
-            %span.points-assigned(ng-class="{'points-missing': pointsMissing(), 'points-satisfied': pointsSatisfied(), 'points-overage': pointsOverage()}") {{pointsGiven() | number:0}}
+            %span.points-assigned(ng-class="{'points-missing': pointsMissing(), 'points-satisfied': pointsSatisfied(), 'points-overage': pointsOverage()}") {{pointsAllocated() | number:0}}
             \/{{pointsPossible() | number:0}} Points Allocated
           %h4.notice(ng-hide="pointsSatisfied() || pointsMissing()") You have not yet allocated any points
           %h4.notice(ng-show="pointsMissing()") {{pointsRemaining() | number:0}} point{{pointsRemaining() > 1 ? "s" : ""}} have not been assigned
           %h4.notice(ng-show="pointsSatisfied()") You have allocated all possible points
+          %h4.notice(ng-show="pointsBelowThreshold()") You have not allocated enough points to meet the threshold
       %br
       .points-adjustment(ng-cloak)
         %h4 Points Adjustment
@@ -83,6 +85,7 @@
       %br
       .total-points(ng-cloak)
         %h3 {{finalPoints() | number:0}} Total Points
+
 
     .right
       .points-adjustment-feedback(ng-if="grade.adjustment_points != 0" ng-cloak)
