changed left-flyout-menu styling to match style of student nav tabs on desktop

--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -64,13 +64,11 @@ li a.notification-right
   .student .offscreen-sidebar
     text-transform: capitalize
     li
-      border-bottom: 1px solid $color-blue-4
+      border-bottom: 1px solid $color-blue-2
       color: $color-white
-      background-color: $color-blue-2
-      padding: .5rem
+      background-color: $color-blue-1
+      font-weight: 300
+      padding: .65rem
       display: block
     li a
-      color: $color-white
-    ul li:hover
-      background-color: $color-blue-3
       color: $color-white
