--- a/app/views/assignments/criterion_grades_review.html.haml
+++ b/app/views/assignments/criterion_grades_review.html.haml
@@ -14,7 +14,7 @@
           Select #{term_for :team}
         = select_tag :team_id, options_for_select(presenter.teams.map { |t| [t.name, t.id] }, presenter.team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
 
-  - if presenter.rubric_designed?
+  - if presenter.grade_with_rubric?
     - presenter.students_being_graded.each do |student|
       - grade_for_assignment = student.grade_for_assignment(presenter.assignment)
       - if grade_for_assignment.present? && grade_for_assignment.instructor_modified?
