--- a/app/views/assignments/_show_student.haml
+++ b/app/views/assignments/_show_student.haml
@@ -27,23 +27,23 @@
 
     #tabt1.ui-tabs-panel.ui-widget-content{role: "tabpanel"}
       #tab1.active
-        = render "assignments/description_and_downloads", presenter: presenter
+        = render partial: "assignments/description_and_downloads", locals: { presenter: presenter }
       - if presenter.show_rubric_preview? current_student
         #tab2
-          = render "assignments/rubric_preview", presenter: presenter
+          = render partial: "assignments/rubric_preview", locals: { presenter: presenter }
       - if presenter.has_submission_for? current_student
         #tab3
-          = render "submissions/submission_content",
-              presenter: ShowSubmissionPresenter.new(id: presenter.submission_for_assignment(current_student).id,
-              assignment_id: presenter.assignment.id, course: current_course)
+          = render partial: "submissions/submission_content",
+              locals: { presenter: ShowSubmissionPresenter.new(id: presenter.submission_for_assignment(current_student).id,
+                assignment_id: presenter.assignment.id, course: current_course) }
         #history
           = history_timeline presenter.submission_grade_history(current_student)
       - if presenter.grades_available_for? current_student
         #tab4
-          = render "grades/grade_content", presenter: presenter
+          = render partial: "grades/grade_content", locals: { presenter: presenter }
         - if !presenter.hide_analytics?
           #tab5
             - if presenter.assignment.has_groups?
-              = render "grades/analytics/group_analytics", presenter: presenter
+              = render partial: "grades/analytics/group_analytics", locals: { presenter: presenter }
             - else
-              = render "grades/analytics/individual_analytics", presenter: presenter
+              = render partial: "grades/analytics/individual_analytics", locals: { presenter: presenter }
