--- a/app/views/assignments/_rubric_preview.html.haml
+++ b/app/views/assignments/_rubric_preview.html.haml
@@ -28,7 +28,7 @@
 
               .row.badge-row
                 - level.level_badges.each_with_index do |level_badge, index|
-                  - if BadgeProctor.new(level_badge.badge).viewable?(current_user, level: level) && index < 2
+                  - if BadgeProctor.new(level_badge.badge).viewable?(current_user, level: level)
                     .level-badge-image
                       %img{:src => level_badge.badge.try(:icon), class: "level_badge" }
           - if criterion.levels.size < presenter.rubric_max_level_count
