--- a/app/views/grades/components/_criterion_grade_results.haml
+++ b/app/views/grades/components/_criterion_grade_results.haml
@@ -31,7 +31,7 @@
 
             .row.badge-row
               - level.level_badges.each_with_index do |level_badge, index|
-                - if BadgeProctor.new(level_badge.badge).viewable?(current_user, level: level) && index < 2
+                - if BadgeProctor.new(level_badge.badge).viewable?(current_user, level: level)
                   %span.level-badge-image
                     %img{:src => level_badge.badge.icon, width: "30px", height: "30px" }
               .clear
