--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -37,6 +37,7 @@
         - resubmissions.each do |re|
           %tr
             - if re.assignment.is_individual?
+              - grade = re.student.grade_for_assignment(re.assignment)
               %td= link_to re.student.first_name, student_path(re.student)
               %td= link_to re.student.last_name, student_path(re.student)
               - if current_course.has_teams?
@@ -44,14 +45,14 @@
                   - team = re.student.team_for_course(current_course)
                   - if team.present?
                     = link_to team.name, team
-              %td= points re.student.grade_for_assignment(re.assignment).score
-              %td= re.student.grade_for_assignment(re.assignment).graded_at
+              %td= points grade.score
+              %td= grade.graded_at
               %td= re.submitted_at
               %td
                 .right
                   %ul.button-bar
                     %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(re.assignment, id: re.id), class: "button"
-                    %li= link_to glyph(:edit) + "Edit Grade", edit_grade_path(re.student.grade_for_assignment(re.assignment)), class: "button"
+                    %li= link_to glyph(:edit) + "Edit Grade", edit_grade_path(grade), class: "button"
             - elsif re.assignment.has_groups?
               %td= link_to re.group.name, group_path(id: re.group.id)
               %td
