--- a/app/views/assignments/individual/_individual_show.haml
+++ b/app/views/assignments/individual/_individual_show.haml
@@ -1,9 +1,5 @@
 - if presenter.has_teams? && presenter.individual_assignment?
-  .team-filter
-    = form_tag assignment_path(presenter.assignment), name: "see_team", onchange: ("javascript: document.see_team.submit();"), method: :get do
-      %label.sr-only{:for => "team_id"}
-        Select #{term_for :team} –
-      = select_tag :team_id, options_for_select(presenter.teams.map { |t| [t.name, t.id] }, presenter.team.try(:id)), prompt: "– Select #{(term_for :team).titleize} –"
+  = team_filter(assignment_path(presenter.assignment))
 
 = form_tag edit_status_assignment_grades_path(presenter.assignment), method: :get do
   %table.dynatable.no-table-header
