switched to using cardtable and added styles to separate tables on mobile and hide key data for buttons in last rows

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -126,3 +126,11 @@ i.missing_grade
 
   th a:hover
     color: $color-blue-3
+
+  table
+    border: 1px solid $color-grey-5
+    margin-bottom: 2em
+
+    tr:last-child
+      .st-key
+        display: none
