--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -13,7 +13,7 @@ table
   tr:nth-child(even)
     background-color: $color-grey-6 !important
 
-  td
+  td:not:last-child
     border-bottom: 1px solid $color-grey-5
     padding: .5rem
 
@@ -129,8 +129,21 @@ i.missing_grade
 
   table
     border: 1px solid $color-grey-5
-    margin-bottom: 2em
+    margin-bottom: 1em
 
-    tr:last-child
+    tr:first-child
+      background-color: $color-blue-2 !important
+      color: $color-white
+      a
+        color: $color-white
+
+    tr:last-child, tr:first-child
       .st-key
         display: none
+
+    tr:first-child
+      text-align: center
+
+      .st-val
+        padding: .5em
+        font-size: .85em
