--- a/app/views/analytics/index.html.haml
+++ b/app/views/analytics/index.html.haml
@@ -2,11 +2,11 @@
 
 %h3.pagetitle= @title
 
-= render "buttons"
+= render partial: "analytics/buttons"
 
 .pageContent
 
-  = render "layouts/alerts"
+  = render partial: "layouts/alerts"
 
   %h4.subtitle Interactions
 
