--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -52,7 +52,7 @@
                 .right
                   %ul.button-bar
                     %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(re.assignment, id: re.id), class: "button"
-                    %li= link_to glyph(:edit) + "Edit Grade", edit_grade_path(grade), class: "button"
+                    %li= link_to glyph(:edit) + "Edit Grade", assignment_student_grade_path(re.assignment, re.student), method: :post, class: "button"
             - elsif re.assignment.has_groups?
               %td= link_to re.group.name, group_path(id: re.group.id)
               %td
