--- a/app/views/students/syllabus/components/_grade_buttons.haml
+++ b/app/views/students/syllabus/components/_grade_buttons.haml
@@ -3,7 +3,7 @@
   / Grade Management /
   - if current_user_is_staff?
     - if assignment.is_individual?
-      %li= link_to glyph(:edit) + "Edit Grade", edit_grade_path(presenter.grade_for(assignment)), class: "button"
+      %li= link_to glyph(:edit) + "Edit Grade", assignment_student_grade_path(assignment, presenter.student), method: :post, class: "button"
     - elsif assignment.has_groups?
       %li= link_to glyph(:edit) + "Edit Grade", grade_assignment_group_path(assignment, presenter.group_for(assignment)), class: "button"
 - else
