--- a/app/views/info/_students_table.haml
+++ b/app/views/info/_students_table.haml
@@ -1,4 +1,4 @@
-%table.dynatable{role: "grid"}
+%table.dynatable.no-button-bar{role: "grid"}
   %thead
     %tr
       %th{ scope: "column", :width => "20%" }= course.user_term
