--- a/app/views/info/awarded_badges.html.haml
+++ b/app/views/info/awarded_badges.html.haml
@@ -12,7 +12,7 @@
           .sr-only Select #{term_for :team}
         = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
 
-  %table.dynatable
+  %table.dynatable.no-table-header.no-button-bar
     %caption.sr-only All Awarded Achievements
     %thead
       %tr
