changed button bar back to displaying block on 1200 max width to prevent styling issues as page scaled down

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -111,6 +111,7 @@ i.missing_grade
   tbody ul.button-bar li a.button
     border-radius: $global-radius
     padding: 2px 5px
+    display: block
     white-space: nowrap
     margin-bottom: .2rem !important
 
