cleaned up styles for showing tables with second row headers and used this class on leaderboard to hide flag rows

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -135,6 +135,7 @@ i.missing_grade
     .table-header-row
       background-color: $color-blue-2 !important
       color: $color-white
+      text-align: center
       a
         color: $color-white
 
@@ -143,13 +144,13 @@ i.missing_grade
         display: none
 
     tr:first-child
-      text-align: center
-
       .st-val
         padding: .5em
         font-size: .85rem
 
-table.instructor-assignments 
+table.second-row-header
+  tr:first-child
+    display: none
   tr:nth-child(2)
     .st-key
       display: none
