--- a/app/views/assignments/index.html.haml
+++ b/app/views/assignments/index.html.haml
@@ -24,7 +24,7 @@
             %i.fa.fa-angle-double-right.fa-fw
           .assignment-type-name #{assignment_type.name} – #{points assignment_type.total_points} points
         .collapse-hidden
-          %table.instructor-assignments{"aria-describedby" => "assignment-type-#{assignment_type.id}"}
+          %table.instructor-assignments.second-row-header{"aria-describedby" => "assignment-type-#{assignment_type.id}"}
             %thead
               %tr
                 %th.draggable
