--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -55,8 +55,8 @@ body
 a
   text-decoration: none
   color: $color-blue-3
-  
-.assignment_type a, table a
+
+.assignment_type a, table a, .challenge a
   text-decoration: none
   color: $color-blue-2
 
@@ -116,7 +116,7 @@ h4.assignment_name
   display: inline
 
 /** Instructor and student-view assignment types accordion **/
-.assignment_type h3, .assignment-type-name
+.assignment_type h3, .assignment-type-name, .challenge h3
   font-weight: 400
 
 h5.section-title
