Added predicted grade to graphic

--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -19,7 +19,7 @@ $predictor-font-size-5 : .55rem
 // SVG
 
 .graphics-wrap
-  height: 118px
+  height: 138px
 
 .graphics-screen
   height: 150px
@@ -33,7 +33,7 @@ $predictor-font-size-5 : .55rem
 
 #predictor-graphic
   width: 100%
-  height: 120px
+  height: 140px
   margin: 0
   background-color: $color-white
   .grade-point-axis
@@ -61,6 +61,10 @@ $predictor-font-size-5 : .55rem
       fill: $color-blue-3
       width: 20
       height: 20
+  #svg-predicted-grade
+    font-size: $predictor-font-size-3
+    font-weight: bold
+    -webkit-transform: translate(10px,130px) /* Safari */
 
 // ICONS AND TOOLTIPS
 
