--- a/app/assets/javascripts/angular/templates/ng_predictor_graphic.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_graphic.html.haml
@@ -16,6 +16,7 @@
           %rect.key{"width"=>"20", "height"=>"20"}
           %text.description{"x"=>"22", "y"=>"16", "font-family"=>"Verdana"}
             Total Predicted: {{allPointsPredicted() | number}} (left to earn: {{allPointsPredicted() - allPointsEarned() | number}})
-
-
-
+        %g{"id" => "svg-predicted-grade"}
+          %text.description
+            Predicted Final Grade:
+            {{predictedGradeLevel()}}
